[metadata]
license_file = LICENSE
name = phamerate
version = 0.2.2
author = Christian Gauthier
author_email = chg60@pitt.edu
description = Assort phage protein sequences into phamilies using MMseqs2
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/chg60/phamerate
project_urls =
    Source = https://github.com/chg60/phamerate
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
package_dir =
    =src
packages = find:
install_requires =
    biopython

[options.packages.find]
where = src
include = phamerate
exclude =

[options.entry_points]
console_scripts =
    phamerate = phamerate.__main__:main